<?xml version="1.0"?>
<package format="2">
  <name>tiago_webots_ros</name>
  <version>0.0.1</version>
  <description>The ROS package containing Tiago's robot components for Webots</description>
  <maintainer email="renan028@gmail.com">Cyberbotics</maintainer>
  <author>Renan Freitas</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>iris_lama_ros</depend>
  <depend>gmapping</depend>
  <depend>move_base</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>teb_local_planner</depend>
  <depend>tf</depend>
  <depend>webots_ros</depend>
  <depend>xmlrpcpp</depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

</package>
